[#31407895 #31407821] - Added JS script in .htc file to avoid maximum changes in css for fixing product/area selector and Help tab issues in IE6, both issues are fixed in IE6. This JS script converts .hover css to required format for IE6. [This script also useful for making css to work in IE6 like :hover and :active for IE6+, and additionally :focus for IE7 and IE8]. - Small addition is done in htaccess file, to avoid any future issue between webserver and .htc file, as some webserver not able to detect content type of .htc file. - CSS changes done OTT, in order to avoid control table stretching and slider stretch issue and position issue in IE6.

--- a/css/intermediary.css
+++ b/css/intermediary.css
@@ -242,7 +242,7 @@ tr.upms td {
 }
 
 #slideout {
-	position: fixed;
+	position: absolute;
 	top: 40px;
 	right: 0;
 	margin: 12px 0 0 0;
@@ -531,3 +531,6 @@ tr.upms td {
 	height: 16px;
 	text-align:center;
 }
+
+/* As in IE6 hover css does not works, below htc file is added which contains js script which will be executed only in IE, the script convert simple as well as complex hover css into compatible format for IE6 by replacing hover by class css - this file is used so that help tab as well as product selector will work in IE6 without any changes of code as well as css code and script can be also useful for making other css to work in IE6 like :hover and :active for IE6+, and additionally :focus for IE7 and IE8. */
+ul, li { behavior:url("css/csshover3.htc"); }
